# twardyece-manager

./: .gitignore  Cargo.toml  README.md
di-service/: Cargo.toml
di-service/src/: certificate.rs  certificate_collection.rs  computer_system.rs  computer_system_collection.rs  main.rs
manager/: Cargo.toml
manager/src/: auth.rs  main.rs
manager/src/endpoint/: service_root.rs  systems.rs
redfish-service/: Cargo.toml
redfish-service/src/: lib.rs
test/: config.yaml  run-container.sh
twardyece-manager/: Cargo.toml
twardyece-manager/src/: auth.rs  endpoint.rs  main.rs
twardyece-manager/src/endpoint/: service_root.rs  session_service.rs  systems.rs  versions.rs
