[package]
name = "di-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
tokio = { version = "1.28.2", features = ["full"] }
axum = "0.6.18"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
serde_json = "1.0.96"
tower = "0.4.13"

redfish-codegen = { version = "0.2.0", path = "../../redfish-codegen/redfish-codegen", features = ["routing"] }
redfish-core = { version = "0.1.0", path = "../../redfish-codegen/redfish-core" }
seuss = { version = "0.1.0", path = "../../redfish-codegen/seuss", features = ["serde", "auth-pam", "service"] }
