[package]
name = "twardyece-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.11"
redfish-codegen = { version = "0.2.0", path = "../redfish-codegen/redfish-codegen" }
serde_json = "1.0.94"
seuss = { version = "0.1.0", path = "../redfish-codegen/seuss" }
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing-subscriber = "0.3.16"
