[package]
name = "twardyece-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.11"
redfish-codegen = { version = "0.2.0", path = "../../redfish-codegen/redfish-codegen", features = ["routing"] }
serde_json = "1.0.94"
seuss = { version = "0.1.0", path = "../../redfish-codegen/seuss", features = ["serde", "auth-pam", "service"] }
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing-subscriber = "0.3.16"
serde = { version = "1.0.158", features = ["derive"] }
serde_yaml = "0.9.19"
clap = { version = "4.1.13", features = ["derive"] }
anyhow = "1.0.70"
